Fix placeholder text not being visible in search bars, and improved sizing

--- a/client/src/app/deck/deck.module.scss
+++ b/client/src/app/deck/deck.module.scss
@@ -635,7 +635,6 @@
 	}
 
 	.deckSearchInput {
-		max-width: 5rem;
 		background: var(--gray-400);
 		border: 2px solid var(--gray-900);
 		color: white;
@@ -644,10 +643,14 @@
 		line-height: 2rem;
 		flex-grow: 1;
 		text-overflow: ellipsis;
+		max-width: 100%;
 
 		&:focus {
 			width: 100%;
-			max-width: 100%;
+		}
+
+		&::placeholder {
+			color: var(--gray-200);
 		}
 	}
 }
