--- a/client/src/app/main-menu/statistics.module.scss
+++ b/client/src/app/main-menu/statistics.module.scss
@@ -361,7 +361,6 @@
 		}
 
 		input {
-			max-width: 5rem;
 			background: var(--gray-400);
 			border: 2px solid var(--gray-900);
 			color: white;
@@ -370,9 +369,16 @@
 			line-height: 2rem;
 			flex-grow: 1;
 			text-overflow: ellipsis;
-			width: 100%;
 			max-width: 100%;
 			height: min-content;
+
+			&.opponentInput {
+				width: 100%;
+			}
+
+			&::placeholder {
+				color: var(--gray-200);
+			}
 		}
 	}
 }
